# asfa

./: .envrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODOs.md  crates.js  flake.nix  help.html  index.html  run-tests.sh  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rust.yml
asfa/: all.html  fn.main.html  fn.try_main.html  index.html  sidebar-items.js
asfa/at/: index.html  sidebar-items.js  struct.At.html
asfa/cfg/: constant.CONTROLS_ENHANCED.html  fn.check_prefix_length.html  fn.default_config_directories.html  fn.dummy_host.html  fn.dummy_host_str.html  fn.load.html  index.html  sidebar-items.js  struct.Auth.html  struct.Config.html  struct.Host.html
asfa/cli/: enum.SpinnerSetting.html  enum.UserCommand.html  fn.draw_boxed.html  fn.join_frames.html  fn.spinner.html  fn.style_progress_bar_count.html  fn.style_progress_bar_transfer.html  fn.style_spinner.html  index.html  sidebar-items.js  struct.Opts.html  struct.WaitingSpinner.html
asfa/cli/color/: index.html  sidebar-items.js  struct.dot.html  struct.entry.html  struct.expire.html  struct.failure.html  struct.filename.html  struct.frame.html  struct.success.html
asfa/cli/text/: fn.separator.html  index.html  sidebar-items.js  struct.ColoredTextReplacer.html
asfa/cmd/: index.html  sidebar-items.js  trait.Command.html
asfa/cmd/check/: index.html  sidebar-items.js  struct.Check.html
asfa/cmd/clean/: index.html  sidebar-items.js  struct.Clean.html
asfa/cmd/list/: index.html  sidebar-items.js  struct.List.html
asfa/cmd/push/: index.html  sidebar-items.js  struct.Push.html
asfa/cmd/rename/: enum.IndexOrFile.html  index.html  sidebar-items.js  struct.Rename.html
asfa/cmd/verify/: index.html  sidebar-items.js  struct.Verify.html
asfa/file_listing/: index.html  sidebar-items.js  struct.FileListing.html  struct.FileListingIter.html
asfa/openssh/: enum.OpenSshConfigEntry.html  enum.OpenSshError.html  index.html  sidebar-items.js  struct.OpenSshConfig.html
asfa/ssh/: fn.ensure_port.html  index.html  sidebar-items.js  struct.ExecutedRemoteCommand.html  struct.InteractivePrompt.html  struct.SshSession.html  struct.Tempfile.html
asfa/util/: fn.get_array_from.html  fn.get_bool_from.html  fn.get_dict_from.html  fn.get_explicit_hash.html  fn.get_hash.html  fn.get_int_from.html  fn.get_real_from.html  fn.get_required.html  fn.get_string_from.html  fn.yaml_string.html  index.html  macro.make_yaml_getter!.html  macro.make_yaml_getter.html  sidebar-items.js  struct.InvalidYamlTypeError.html
aur/: PKGBUILD
aur/asfa/: .SRCINFO  PKGBUILD
aur/asfa-bin/: .SRCINFO  PKGBUILD
aur/asfa-git/: .SRCINFO  PKGBUILD
example-config/asfa/: config.yaml
example-config/asfa/hosts/: my-remote-site-2.yaml
hooks/: pre-push-update-docs.sh
implementors/asfa/cmd/: trait.Command.js
implementors/clap/derive/: trait.Clap.js  trait.FromArgMatches.js  trait.IntoApp.js  trait.Subcommand.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/ssh2/session/: trait.KeyboardInteractivePrompt.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: at.rs  cfg.rs  cli.rs  dummy_host.yml  file_listing.rs  main.rs  openssh.rs  ssh.rs  util.rs
src/asfa/: at.rs.html  cfg.rs.html  cli.rs.html  file_listing.rs.html  main.rs.html  openssh.rs.html  ssh.rs.html  util.rs.html
src/asfa/cmd/: check.rs.html  clean.rs.html  list.rs.html  mod.rs.html  push.rs.html  rename.rs.html  verify.rs.html
src/cmd/: check.rs  clean.rs  list.rs  mod.rs  push.rs  rename.rs  verify.rs
test-utils/: setup.sh
test-utils/ci-config/: raw.yaml
tests/: cmd_check.rs  cmd_rename.rs  simple-file-upload.rs
tests/fixture/: mod.rs
tools/: changelog_version.sh  commit-post-release.sh  make-binary-release.sh  make-release.sh  make_release.sh  update-docs-HEAD.sh  update-docs-latest-release.sh
trait.impl/asfa/cmd/: trait.Command.js
trait.impl/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/lazy_static/: trait.LazyStatic.js
trait.impl/ssh2/session/: trait.KeyboardInteractivePrompt.js
