[package]
name = "asfa"
version = "0.7.5-pre"
authors = ["Oliver Breitwieser <oliver@breitwieser.eu>"]
edition = "2018"
description = "Avoid sending file attachments by uploading to a remote site with non-guessable (hash-based) prefix and print URLs."
keywords = ["cli", "file", "ssh", "upload", "mail"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/obreitwi/asfa"
repository = "https://github.com/obreitwi/asfa.git"
documentation = "https://obreitwi.github.io/asfa"

[features]
doc = []

[dependencies]
anyhow = "1.0.38"
atty = "0.2.14"
base64 = "0.13.0"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
console = "0.14.1"
dialoguer = "0.8.0"
expanduser = "1.2.1"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.16.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
percent-encoding = "2.1.0"
regex = "1.4.5"
rpassword = "5.0.1"
sha2= "0.9.3"
simple_logger = "1.11.0"
ssh2 = "0.9.1"
thiserror = "1.0.24"
whoami = "1.1.1"
yaml-rust = "0.4.5"

[dev-dependencies]
cmd_lib_core = "0.4.0"
rand = "0.8.3"

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
sign-commit = true
sign-tag = true
dev-version-ext = "pre"
push-remote = "git@github.com:obreitwi/asfa.git"
tag-message = "Release: v{{version}}"
pre-release-commit-message = "Release: v{{version}}"
post-release-commit-message = "Development iteration: v{{next_version}}"

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="(?m)^## v[0-9]+\\.[0-9]+\\.[0-9]+-pre \\(under development\\)$"
replace="## v{{version}} ({{date}})"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file="README.md"
search="https://img\\.shields\\.io/github/commits-since/obreitwi/asfa/v[0-9]+\\.[0-9]+\\.[0-9]+"
replace="https://img.shields.io/github/commits-since/obreitwi/asfa/v{{version}}"
exactly = 1

[[package.metadata.release.post-release-replacements]]
file = "CHANGELOG.md"
search = "(?m)(?P<header>^# .*)$"
replace = "$header\n\n## v{{next_version}} (under development)"
exactly = 1
