[package]
name = "asfa"
version = "0.9.1"
authors = ["Oliver Breitwieser <oliver@breitwieser.eu>"]
edition = "2021"
description = "Avoid sending file attachments by uploading via SSH to a remote site with non-guessable (hash-based) prefix and print URLs."
keywords = ["cli", "file", "ssh", "upload", "mail"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/obreitwi/asfa"
repository = "https://github.com/obreitwi/asfa.git"
documentation = "https://obreitwi.github.io/asfa"

[features]
doc = []

[dependencies]
anyhow = "1.0.51"
atty = "0.2.14"
base64 = "0.13.0"
chrono = "0.4.19"
clap = {version = "3.0.0-rc.7", features = ["derive", "cargo"]}
console = "0.15.0"
dialoguer = "0.9.0"
expanduser = "1.2.2"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
percent-encoding = "2.1.0"
regex = "1.5.4"
rpassword = "5.0.1"
sha2= "0.10.0"
simple_logger = { version = "1.16.0", default-features = false, features = ["threads", "colors"]}
ssh2 = "0.9.3"
thiserror = "1.0.30"
whoami = "1.2.1"
yaml-rust = "0.4.5"

[dev-dependencies]
cmd_lib_core = "0.4.0"
rand = "0.8.4"

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
sign-commit = true
sign-tag = true
dev-version-ext = "pre"
push-remote = "git@github.com:obreitwi/asfa.git"
tag-message = "Release: v{{version}}"
pre-release-commit-message = "Release: v{{version}}"
post-release-commit-message = "Development iteration: v{{next_version}}"

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="(?m)^## v[0-9]+\\.[0-9]+\\.[0-9]+-pre \\(under development\\)$"
replace="## v{{version}} ({{date}})"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file="README.md"
search="https://img\\.shields\\.io/github/commits-since/obreitwi/asfa/v[0-9]+\\.[0-9]+\\.[0-9]+"
replace="https://img.shields.io/github/commits-since/obreitwi/asfa/v{{version}}"
exactly = 1

[[package.metadata.release.post-release-replacements]]
file = "CHANGELOG.md"
search = "(?m)(?P<header>^# .*)$"
replace = "$header\n\n## v{{next_version}} (under development)"
exactly = 1
