[package]
name = "asfa"
version = "0.9.1"
authors = ["Oliver Breitwieser <oliver@breitwieser.eu>"]
edition = "2021"
description = "Avoid sending file attachments by uploading via SSH to a remote site with non-guessable (hash-based) prefix and print URLs."
keywords = ["cli", "file", "ssh", "upload", "mail"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/obreitwi/asfa"
repository = "https://github.com/obreitwi/asfa.git"
documentation = "https://obreitwi.github.io/asfa"

[features]
doc = []

[dependencies]
anyhow = "1.0.75"
base64 = "0.13.1"
chrono = "0.4.31"
clap = {version = "3.2.25", features = ["derive", "cargo"]}
console = "0.15.7"
dialoguer = "0.10.4"
expanduser = "1.2.2"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.17.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.20"
percent-encoding = "2.3.0"
regex = { version = "1.10.2", default-features = false, features = ["std", "unicode-bool", "unicode-perl"] }
rpassword = "7.3.1"
sha2= "0.10.8"
simple_logger = { version = "2.3.0", default-features = false, features = ["threads", "colors"]}
ssh2 = "0.9.4"
thiserror = "1.0.50"
whoami = "1.5.0"
yaml-rust = "0.4.5"

[dev-dependencies]
cmd_lib_core = "0.4.0"
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
sign-commit = true
sign-tag = true
# dev-version-ext = "pre"
push-remote = "git@github.com:obreitwi/asfa.git"
tag-message = "Release: v{{version}}"
pre-release-commit-message = "Release: v{{version}}"
# post-release-commit-message = "Development iteration: v{{next_version}}"

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="^## Unreleased changes$"
replace="## v{{version}} ({{date}})"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file="README.md"
search="https://img\\.shields\\.io/github/commits-since/obreitwi/asfa/v[0-9]+\\.[0-9]+\\.[0-9]+"
replace="https://img.shields.io/github/commits-since/obreitwi/asfa/v{{version}}"
exactly = 1
